Scooter 1.1.0 Release