@@ -1,6 +1,6 @@
 /*
- *   This software is distributed under the terms of the FSF 
- *   Gnu Lesser General Public License (see lgpl.txt). 
+ *   This software is distributed under the terms of the FSF
+ *   Gnu Lesser General Public License (see lgpl.txt).
  *
  *   This program is distributed WITHOUT ANY WARRANTY. See the
  *   GNU General Public License for more details.
@@ -10,19 +10,19 @@ package com.scooterframework.orm.sqldataexpress.vendor;
 import java.util.Map;
 import java.util.Properties;
 
-import com.scooterframework.common.logging.LogUtil;
 import com.scooterframework.common.util.Util;
 import com.scooterframework.orm.sqldataexpress.config.DatabaseConfig;
 import com.scooterframework.orm.sqldataexpress.processor.DataProcessor;
 import com.scooterframework.orm.sqldataexpress.util.SqlExpressUtil;
 
 /**
- * H2DBAdapter class.
- * 
+ * H2DBAdapter class applies to H2 database.
+ *
  * @author (Fei) John Chen
  */
 public class H2DBAdapter extends DBAdapter {
-	
+
+	@Override
 	public String[] getCatalogAndSchema(String connName) {
 		String s = getH2Schema(connName);
         if (s != null) s = s.toUpperCase();
@@ -31,7 +31,7 @@ public class H2DBAdapter extends DBAdapter {
         s2[1] = s;
 		return s2;
 	}
-    
+
 	protected String getH2Schema(String connName) {
 		Properties p = SqlExpressUtil.getConnectionProperties(connName);
 		String schema = p.getProperty(DatabaseConfig.KEY_DB_CONNECTION_SCHEMA);
@@ -53,38 +53,18 @@ public class H2DBAdapter extends DBAdapter {
 		}
 		return schema;
 	}
-    
-    public String getOneRowSelectSQL(String catalog, String schema, String table) {
+
+	@Override
+    public String getOneRowSelectSQL(String catalog, String schema, String tableName) {
     	String selectSQL = "SELECT TOP 1 * FROM ";
-        return selectSQL + getExpandedTableName(catalog, schema, table);
+        return selectSQL + getExpandedTableName(catalog, schema, tableName);
     }
-    
-    public String getExpandedTableName(String catalog, String schema, String table) {
-    	if (table.indexOf('.') != -1) return table;
-    	String selectSQL = "";
-    	if (isEmpty(catalog)) {
-    		if (isEmpty(schema)) {
-        		selectSQL = selectSQL + table;
-    		}
-    		else {
-        		selectSQL = selectSQL + schema + "." + table;
-    		}
-    	}
-    	else {
-    		if (isEmpty(schema)) {
-        		selectSQL = selectSQL + table;
-    		}
-    		else {
-        		selectSQL = selectSQL + catalog + "." + schema + "." + table;
-    		}
-    	}
-        return selectSQL;
-    }
-    
-	public String preparePaginationSql(String selectSql, Map inputs, Map outputFilters) {
-		if (selectSql == null) 
+
+	@Override
+	public String preparePaginationSql(String selectSql, Map<String, Object> inputs, Map<String, String> outputFilters) {
+		if (selectSql == null)
 			throw new IllegalArgumentException("Input selectSql is null.");
-		
+
 		if (!selectSql.trim().toUpperCase().startsWith("SELECT")) {
 			throw new IllegalArgumentException("Input selectSql must start with SELECT: " + selectSql);
 		}
@@ -93,19 +73,17 @@ public class H2DBAdapter extends DBAdapter {
         boolean hasOffset = (offset > 0)?true:false;
         int limit = Util.getIntValue(inputs, DataProcessor.input_key_records_limit, DataProcessor.DEFAULT_PAGINATION_LIMIT);
         if (limit == DataProcessor.NO_ROW_LIMIT) limit = DataProcessor.DEFAULT_PAGINATION_LIMIT;
-        
-        StringBuffer newSelectSqlBF = new StringBuffer(selectSql.length());
+
+        StringBuilder newSelectSqlBF = new StringBuilder(selectSql.length());
         newSelectSqlBF.append(selectSql);
         newSelectSqlBF.append(" LIMIT ?").append(DataProcessor.input_key_records_limit).append(":INTEGER");
-        inputs.put(DataProcessor.input_key_records_limit, new Integer(limit));
-        
+        inputs.put(DataProcessor.input_key_records_limit, Integer.valueOf(limit));
+
         if (hasOffset) {
             newSelectSqlBF.append(" OFFSET ?").append(DataProcessor.input_key_records_offset).append(":INTEGER");
-            inputs.put(DataProcessor.input_key_records_offset, new Integer(offset));
+            inputs.put(DataProcessor.input_key_records_offset, Integer.valueOf(offset));
         }
-        
+
         return newSelectSqlBF.toString();
     }
-    
-    protected LogUtil log = LogUtil.getLogger(this.getClass().getName());
 }
