@@ -1,6 +1,6 @@
 /*
- *   This software is distributed under the terms of the FSF 
- *   Gnu Lesser General Public License (see lgpl.txt). 
+ *   This software is distributed under the terms of the FSF
+ *   Gnu Lesser General Public License (see lgpl.txt).
  *
  *   This program is distributed WITHOUT ANY WARRANTY. See the
  *   GNU General Public License for more details.
@@ -20,7 +20,6 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
 
-import com.scooterframework.common.logging.LogUtil;
 import com.scooterframework.common.util.Util;
 import com.scooterframework.orm.sqldataexpress.config.DatabaseConfig;
 import com.scooterframework.orm.sqldataexpress.object.Parameter;
@@ -29,12 +28,13 @@ import com.scooterframework.orm.sqldataexpress.service.SqlServiceConstants;
 import com.scooterframework.orm.sqldataexpress.util.SqlExpressUtil;
 
 /**
- * OracleDBAdapter class.
- * 
+ * OracleDBAdapter class applies to Oracle database.
+ *
  * @author (Fei) John Chen
  */
 public class OracleDBAdapter extends DBAdapter {
-	
+
+	@Override
 	public String[] getCatalogAndSchema(String connName) {
 		String s = getOracleSchema(connName);
         if (s != null) s = s.toUpperCase();
@@ -43,7 +43,7 @@ public class OracleDBAdapter extends DBAdapter {
         s2[1] = s;
 		return s2;
 	}
-    
+
 	protected String getOracleSchema(String connName) {
 		Properties p = SqlExpressUtil.getConnectionProperties(connName);
 		String schema = p.getProperty(DatabaseConfig.KEY_DB_CONNECTION_SCHEMA);
@@ -51,48 +51,56 @@ public class OracleDBAdapter extends DBAdapter {
 			if (useLoginAsSchema(connName)) {
 				schema = getLoginUserId();
 			}
-			
+
 			if (isEmpty(schema)) {
 				schema = SqlExpressUtil.getConnectionUser(connName);
 			}
 		}
 		return schema;
 	}
-    
+
+    /**
+     * Oracle does not use <tt>catalog</tt>. Therefore it is ignored.
+     */
+    @Override
+    public String getExpandedTableName(String catalog, String schema, String tableName) {
+    	String[] s3 = resolveCatalogAndSchemaAndTable(catalog, schema, tableName);
+    	schema = s3[1];
+    	String table = s3[2];
+
+    	if (isEmpty(schema)) {
+    		tableName = "\"" + table + "\"";
+    	}
+    	else {
+    		tableName = schema + "." +
+    			SqlExpressUtil.checkSpecialCharacterInTableName(table);
+    	}
+        return tableName;
+    }
+
+    @Override
     public String getOneRowSelectSQL(String catalog, String schema, String table) {
     	String selectSQL = "SELECT * FROM ";
     	selectSQL += getExpandedTableName(catalog, schema, table);
     	selectSQL += " WHERE ROWNUM = 1";
     	return selectSQL;
     }
-    
-    public String getExpandedTableName(String catalog, String schema, String table) {
-    	if (table.indexOf('.') != -1) return table;
-    	String selectSQL = "";
-    	if (isEmpty(schema)) {
-    		selectSQL = selectSQL + "\"" + table + "\"";
-    	}
-    	else {
-    		selectSQL = selectSQL + schema + "." + 
-    			SqlExpressUtil.checkSpecialCharacterInTableName(table);
-    	}
-        return selectSQL;
-    }
-    
-    public String preparePaginationSql(String selectSql, Map inputs, Map outputFilters) {
+
+    @Override
+    public String preparePaginationSql(String selectSql, Map<String, Object> inputs, Map<String, String> outputFilters) {
         int offset = Util.getIntValue(inputs, DataProcessor.input_key_records_offset, 0);
         boolean hasOffset = (offset > 0)?true:false;
         int limit = Util.getIntValue(inputs, DataProcessor.input_key_records_limit, DataProcessor.DEFAULT_PAGINATION_LIMIT);
-        
+
         int maxRowIndex = limit;
         if (hasOffset) {
             maxRowIndex = limit + offset;
         }
-        
-        StringBuffer newSelectSqlBF = new StringBuffer(selectSql.length() + 150);
-                
+
+        StringBuilder newSelectSqlBF = new StringBuilder(selectSql.length() + 150);
+
         if (hasOffset) {
-            newSelectSqlBF.append("SELECT * FROM (SELECT a.*, rownum rnum FROM ( ");
+            newSelectSqlBF.append("SELECT * FROM (SELECT /*+ FIRST_ROWS(").append(limit).append(") */ a.*, rownum rnum FROM ( ");
         }
         else {
             newSelectSqlBF.append("SELECT * FROM ( ");
@@ -101,27 +109,27 @@ public class OracleDBAdapter extends DBAdapter {
         if (hasOffset) {
 			newSelectSqlBF.append(" ) a WHERE rownum <= ?").append(DataProcessor.input_key_max_row_index).append(":INTEGER ) ");
             newSelectSqlBF.append("WHERE rnum > ?").append(DataProcessor.input_key_records_offset).append(":INTEGER");
-            inputs.put(DataProcessor.input_key_max_row_index, new Integer(maxRowIndex));
-            inputs.put(DataProcessor.input_key_records_offset, new Integer(offset));
+            inputs.put(DataProcessor.input_key_max_row_index, Integer.valueOf(maxRowIndex));
+            inputs.put(DataProcessor.input_key_records_offset, Integer.valueOf(offset));
 		}
 		else {
 			newSelectSqlBF.append(" ) WHERE rownum <= ?").append(DataProcessor.input_key_max_row_index).append(":INTEGER");
-            inputs.put(DataProcessor.input_key_max_row_index, new Integer(maxRowIndex));
+            inputs.put(DataProcessor.input_key_max_row_index, Integer.valueOf(maxRowIndex));
 		}
-        
-        if (outputFilters == null) outputFilters = new HashMap();
+
+        if (outputFilters == null) outputFilters = new HashMap<String, String>();
         outputFilters.put(SqlServiceConstants.OUTPUT_FILTER_EXCEPT, "RNUM");
-        
+
         return newSelectSqlBF.toString();
     }
 
-    public Object getObjectFromResultSetByType(ResultSet rs, String javaClassType, int sqlDataType, int index) 
+    public Object getObjectFromResultSetByType(ResultSet rs, String javaClassType, int sqlDataType, int index)
     throws SQLException {
         if ("oracle.sql.BLOB".equals(javaClassType)) {
             try {
             	Blob blob = rs.getBlob(index);
                 return getBlobData(blob);
-            } 
+            }
             catch(Exception ex) {
                 throw new SQLException(ex.getMessage());
             }
@@ -130,24 +138,24 @@ public class OracleDBAdapter extends DBAdapter {
             try {
             	Clob clob = rs.getClob(index);
                 return getClobData(clob);
-            } 
+            }
             catch(Exception ex) {
                 throw new SQLException(ex.getMessage());
             }
         }
-        
+
         return super.getObjectFromResultSetByType(rs, javaClassType, sqlDataType, index);
     }
-    
-    public Object getObjectFromStatementByType(CallableStatement cstmt, String javaClassType, int sqlDataType, int index) 
+
+    public Object getObjectFromStatementByType(CallableStatement cstmt, String javaClassType, int sqlDataType, int index)
     throws SQLException {
         Object theObj = null;
-        
+
         if ("oracle.sql.BLOB".equals(javaClassType)) {
             try {
             	Blob blob = cstmt.getBlob(index);
                 return getBlobData(blob);
-            } 
+            }
             catch(Exception ex) {
                 throw new SQLException(ex.getMessage());
             }
@@ -156,19 +164,20 @@ public class OracleDBAdapter extends DBAdapter {
             try {
             	Clob clob = cstmt.getClob(index);
                 return getClobData(clob);
-            } 
+            }
             catch(Exception ex) {
                 throw new SQLException(ex.getMessage());
             }
         }
-        
+
         return theObj;
     }
-    
-    public boolean vendorSpecificSetObject(PreparedStatement pstmt, Object obj, Parameter p, Map inputs)
+
+    @Override
+    public boolean vendorSpecificSetObject(PreparedStatement pstmt, Object obj, Parameter p, Map<String, Object> inputs)
     throws Exception {
         boolean status = false;
-        
+
         if ("oracle.sql.BLOB".equals(p.getJavaClassName())) {
         	if (obj != null) {
 	            InputStream is = getInputStream(obj);
@@ -178,7 +187,7 @@ public class OracleDBAdapter extends DBAdapter {
         	else {
         		pstmt.setBinaryStream(p.getIndex(), (InputStream)null, 0);
         	}
-        	
+
             status = true;
         }
         else if ("oracle.sql.CLOB".equals(p.getJavaClassName())) {
@@ -192,12 +201,10 @@ public class OracleDBAdapter extends DBAdapter {
         	else {
         		pstmt.setCharacterStream(p.getIndex(), (Reader)null, 0);
         	}
-            
+
             status = true;
         }
-        
+
         return status;
     }
-    
-    protected LogUtil log = LogUtil.getLogger(this.getClass().getName());
 }
